--- a/balttechnic-3/technics.html
+++ b/balttechnic-3/technics.html
@@ -11,15 +11,15 @@
   </head>
   <body>
     <div class="main-content">
-      <div style="background-image: url('img/bg-about-left.jpg');" class="left-pic"></div>
+      <div style="background-image: url('img/bg-technics-left.jpg');" class="left-pic"></div>
       <main>
         <header>
           <div class="header-inner"><a href="index.html"><img src="img/logo.png" alt=""></a>
             <div class="menu-lang">
               <h1 class="company-name">Дноуглубительная компания</h1>
               <ul class="menu">
-                <li class="current-menu-item"><a href="text.html">О компании</a></li>
-                <li><a href="technics.html">Техника</a></li>
+                <li><a href="text.html">О компании</a></li>
+                <li class="current-menu-item"><a href="technics.html">Техника</a></li>
                 <li><a href="projects.html">Проекты</a></li>
                 <li><a href="contact.html">Контакты</a></li>
               </ul>
@@ -229,7 +229,7 @@
         </footer>
       </main>
       <div class="right-pic">
-        <div style="background-image: url('img/bg-about-right.jpg');" class="right-pic-bg"></div>
+        <div style="background-image: url('img/bg-technics-right.jpg');" class="right-pic-bg"></div>
       </div>
     </div>
   </body>
